# auto_up

./: .dockerignore  .env.example  .gitignore  Dockerfile  constant.py  docker-compose.yml  pyproject.toml  requirements.txt  test-compose.yml
admin_panel/: admin.py  apps.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  views.py
admin_panel/migrations/: 0001_backupsettings.py  0002_remove_backupsettings_schedule_fields.py  0003_remove_backupsettings_last_run_fields.py  0004_remove_backupsettings.py
auto_up/: admin.py  apps.py  db_search.py  llm_filter.py  models.py  scheduler.py  schema.py  scraper.py  tasks.py  test.py  url_match.py
auto_up/migrations/: 0001_initial.py  0002_skip_url_list.py  0003_renormalize_skip_urls.py
config/: settings.py  urls.py
credentials/: forms.py  services.py  urls.py  views.py
llm/: admin.py  apps.py  content_type_detector.py  json_repair.py  models.py  scheduler.py  schema.py  services.py  tasks.py  tvshow_schema.py  update_pass.py
llm/migrations/: 0001_initial.py  0002_alter_llmsettings_id.py  0003_llmconfig_alter_llmsettings_options_and_more.py  0004_delete_llmsettings.py  0005_llmusage.py  0006_llmusage_response_text.py  0007_llmusage_duplicate_check_json.py  0008_llmusage_duplicate_context_json.py  0009_llmconfig_max_output_tokens.py  0010_alter_llmconfig_max_output_tokens_no_default.py  0011_llmusage_outbound_request_json.py  0012_llmusage_search_query_json.py  0013_alter_llmusage_duplicate_check_json_and_more.py  0014_llmusage_presearch_result_json.py
llm/schema/: __init__.py  blocked_names.py  combined_prompt.py  combined_schema.py  duplicate_schema.py  json_encoding.py  json_schema_validate.py  movie_schema.py  (+5 more)
screenshot/: admin.py  apps.py  models.py  worker.js
scripts/: browser_tab_system.md  cinefreak_all_link.py  generated_title_tests_500.csv  llm_check_response.py  m_txt_to_llm_response.py  root_content_test.py  root_downlaod_link_check.py  url_check.py  url_check_output.txt  url_check_response.html
settings/: admin.py  apps.py  models.py  scheduler.py  signals.py  tasks.py
upload/: admin.py  apps.py  django_q_priority.py  django_q_pusher_backpressure.py  models.py  task_locks.py  tasks.py  urls.py  views.py
(+109 files in other folders)
