[project]
name = "upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cleanup>=9.0.0",
    "django-q2>=1.9.0",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "markitdown>=0.1.5",
    "mistralai>=1.12.4",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "pydoll-python>=2.21.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.0",
    "selectolax>=0.4.7",
    "whitenoise>=6.12.0",
]
